--- a/MediaSelector/build.gradle
+++ b/MediaSelector/build.gradle
@@ -28,10 +28,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    publishing {
-        singleVariant("release")
-    }
 }
 
 dependencies {
@@ -44,31 +40,20 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
 
-// Because the components are created only during the afterEvaluate phase, you must
-// configure your publications using the afterEvaluate() lifecycle method.
+
 afterEvaluate {
     publishing {
         publications {
             // Creates a Maven publication called "release".
             release(MavenPublication) {
-                // Applies the component for the release build variant.
                 from components.release
-
-                // You can then customize attributes of the publication as shown below.
-                groupId = 'com.max.MediaSelector'
-                artifactId = 'final'
-                version = '1.0'
-            }
-            // Creates a Maven publication called “debug”.
-            debug(MavenPublication) {
-                // Applies the component for the debug build variant.
-                from components.debug
-
-                groupId = 'com.max.MediaSelector'
-                artifactId = 'final-debug'
-                version = '1.0'
+                //建议和github地址对应，否则对jitpack无效
+                groupId = 'com.github.MaxNeverSleep'
+                //建议和github仓库名称对应，否则对jitpack无效
+                artifactId = 'MediaSelector'
+                //建议和release的tag相同，否则对jitpack无效
+                version = '0.1.1'
             }
         }
     }
-
 }
