--- a/MediaSelector/src/main/AndroidManifest.xml
+++ b/MediaSelector/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".MediaSelectorPreviewActivity"
             android:exported="true"
-            android:theme="@style/Theme.MediaSelectorActivity" />
+            android:theme="@style/Theme.MediaPreviewActivity" />
     </application>
 
 </manifest>
